--- a/dev.env
+++ b/dev.env
@@ -13,3 +13,6 @@ BIB_ROOT=bibliographies
 # subfolders under .../sites/<SITE_ID>/<BIB_ROOT>/
 PERMALINK_DIR=permalink
 HISTORY_DIR=history
+
+# Zotero API Key
+ZOTERO_API_KEY=ZSVyDZDUUO9uJiz2fpD5BHA8
